add Course link button for members

--- a/partials/site-nav.hbs
+++ b/partials/site-nav.hbs
@@ -34,6 +34,7 @@
                     <li><a href="#signout" data-members-signout>Log out</a></li>
                 </ul>
             </div>
+            <a class="button primary small header-cta" href="{{@site.url}}/bun-venit-la-curs/">Course</a>
         {{else}}
             <a class="signin-link" href="{{@site.url}}/signin/">Log in</a>
             <a class="button primary small header-cta" href="{{@site.url}}/bun-venit-la-curs/">Buy Course</a>
