fix log out btn

--- a/partials/site-nav.hbs
+++ b/partials/site-nav.hbs
@@ -18,7 +18,7 @@
     </div>
     <div class="site-nav-right">
         {{#if @member}}
-            <a class="signin-link" href="#signout">Log out</a>
+            <a class="signin-link" href="#signout" data-members-signout>Log out</a>
             <a class="button primary small header-cta" href="{{@site.url}}/course/">Course</a>
             <!-- <div class="account-menu">
                  <a href="javascript:" class="account-menu-avatar" id="account-menu" type="checkbox" name="menu">
