--- a/partials/site-nav.hbs
+++ b/partials/site-nav.hbs
@@ -22,22 +22,22 @@
                 <a class="signin-link" href="#signout" data-members-signout>Log out</a>
             </a>
             <a class="button primary small header-cta" href="{{@site.url}}/course/">Course</a>
-            <div class="account-menu">
-                <a href="javascript:" class="account-menu-avatar" id="account-menu" type="checkbox" name="menu">
-                    {{> "icons/avatar"}}
-                    {{#if @member.avatar_image}}
-                        <img src="{{@member.avatar_image}}" />
-                    {{/if}}
-                </a>
-                <ul class="account-menu-dropdown">
-                    <li class="account-info">
-                        <small>Signed in as</small>
-                        <span class="account-email" title="{{@member.email}}">{{@member.email}}</span>
-                    </li>
-                    <li><a href="{{@site.url}}/account/">Account</a></li>
-                    <li><a href="#signout" data-members-signout>Log out</a></li>
-                </ul>
-            </div>
+            <!-- <div class="account-menu">
+                 <a href="javascript:" class="account-menu-avatar" id="account-menu" type="checkbox" name="menu">
+                 {{> "icons/avatar"}}
+                 {{#if @member.avatar_image}}
+                 <img src="{{@member.avatar_image}}" />
+                 {{/if}}
+                 </a>
+                 <ul class="account-menu-dropdown">
+                 <li class="account-info">
+                 <small>Signed in as</small>
+                 <span class="account-email" title="{{@member.email}}">{{@member.email}}</span>
+                 </li>
+                 <li><a href="{{@site.url}}/account/">Account</a></li>
+                 <li><a href="#signout" data-members-signout>Log out</a></li>
+                 </ul>
+                 </div> -->
         {{else}}
             <a class="signin-link" href="{{@site.url}}/signin/">Log in</a>
             <a class="button primary small header-cta" href="{{@site.url}}/bun-venit-la-curs/">Buy Course</a>
