--- a/partials/post-card.hbs
+++ b/partials/post-card.hbs
@@ -1,19 +1,19 @@
 <article class="post-card {{post_class}} {{#unless feature_image}}no-image{{else}}{{#is "home"}}{{#has index="nth:6"}}post-card-large{{/has}}{{/is}}{{/unless}}">
 
     {{#if feature_image}}
-    <a class="post-card-image-link" href="{{url}}">
-        {{!-- This is a responsive image, it loads different sizes depending on device
-        https://medium.freecodecamp.org/a-guide-to-responsive-images-with-ready-to-use-templates-c400bd65c433 --}}
-        <img class="post-card-image"
-            srcset="{{img_url feature_image size="s"}} 300w,
-                    {{img_url feature_image size="m"}} 600w,
-                    {{img_url feature_image size="l"}} 1000w,
-                    {{img_url feature_image size="xl"}} 2000w"
-            sizes="(max-width: 1000px) 400px, 700px"
-            src="{{img_url feature_image size="m"}}"
-            loading="lazy"
-            alt="{{title}}"
-        />
+        <a class="post-card-image-link" href="{{url}}">
+            {{!-- This is a responsive image, it loads different sizes depending on device
+                                                                                                                     https://medium.freecodecamp.org/a-guide-to-responsive-images-with-ready-to-use-templates-c400bd65c433 --}}
+            <img class="post-card-image"
+                 srcset="https://res.cloudinary.com/ftmm/image/fetch/w_300,c_fit,q_auto,f_auto,dpr_auto/{{img_url feature_image size="s" absolute="true"}} 300w,
+                        https://res.cloudinary.com/ftmm/image/fetch/w_600,c_fit,q_auto,f_auto,dpr_auto/{{img_url feature_image size="m" absolute="true"}} 600w,
+                        https://res.cloudinary.com/ftmm/image/fetch/w_1000,c_fit,q_auto,f_auto,dpr_auto/{{img_url feature_image size="l"absolute="true"}} 1000w,
+                        https://res.cloudinary.com/ftmm/image/fetch/w_2000,c_fit,q_auto,f_auto,dpr_auto/{{img_url feature_image size="xl"absolute="true"}} 2000w"
+                 sizes="(max-width: 1000px) 400px, 700px"
+                 src="https://res.cloudinary.com/ftmm/image/fetch/w_600,c_fit,q_auto,f_auto,dpr_auto/{{img_url feature_image size="m" absolute="true"}}"
+                 loading="lazy"
+                 alt="{{title}}"
+            />
     </a>
     {{/if}}
 
