--- a/post.hbs
+++ b/post.hbs
@@ -86,24 +86,10 @@ into the {body} of the default.hbs template --}}
             </header>
 
             {{#if access}}
-            {{!-- if the user has access to this post, show it to them --}}
+                {{!-- if the user has access to this post, show it to them --}}
 
                 {{#if feature_image}}
-                <figure class="post-full-image">
-                    {{!-- This is a responsive image, it loads different sizes depending on device
-                    https://medium.freecodecamp.org/a-guide-to-responsive-images-with-ready-to-use-templates-c400bd65c433 --}}
-                    <img
-                        srcset="{{img_url feature_image size="s"}} 300w,
-                                {{img_url feature_image size="m"}} 600w,
-                                {{img_url feature_image size="l"}} 1000w,
-                                {{img_url feature_image size="xl"}} 2000w"
-                        sizes="(max-width: 800px) 400px,
-                            (max-width: 1170px) 1170px,
-                                2000px"
-                        src="{{img_url feature_image size="xl"}}"
-                        alt="{{title}}"
-                    />
-                </figure>
+                    {{> "feature-image"}}
                 {{/if}}
                 <section class="post-full-content">
                     <div class="post-content">
