--- a/partials/header-background.hbs
+++ b/partials/header-background.hbs
@@ -14,29 +14,29 @@ with a `no-image` class so we can style it accordingly.
 {{#if background}}
 
 <style type="text/css">
-    .responsive-header-img {
-        background-image: url({{img_url background size='xl'}});
-    }
+ .responsive-header-img {
+     background-image: url(https://res.cloudinary.com/ftmm/image/fetch/w_2000,c_fit,q_auto,f_auto,dpr_auto/{{img_url background size='xl'}});
+ }
 
-    @media(max-width: 1000px) {
-        .responsive-header-img {
-            background-image: url({{img_url background size='l'}});
-            background-image: -webkit-image-set(url({{img_url background size='l'}}) 1x,
-                url({{img_url background size='xl'}}) 2x);
-            background-image: image-set(url({{img_url background size='l'}}) 1x,
-                url({{img_url background size='xl'}}) 2x);
-        }
-    }
+ @media(max-width: 1000px) {
+     .responsive-header-img {
+         background-image: url(https://res.cloudinary.com/ftmm/image/fetch/w_1000,c_fit,q_auto,f_auto,dpr_auto/{{img_url background size='l'}});
+         background-image: -webkit-image-set(url(https://res.cloudinary.com/ftmm/image/fetch/w_1000,c_fit,q_auto,f_auto,dpr_auto/{{img_url background size='l'}}) 1x,
+         url(https://res.cloudinary.com/ftmm/image/fetch/w_2000,c_fit,q_auto,f_auto,dpr_auto/{{img_url background size='xl'}}) 2x);
+         background-image: image-set(url(https://res.cloudinary.com/ftmm/image/fetch/w_1000,c_fit,q_auto,f_auto,dpr_auto/{{img_url background size='l'}}) 1x,
+         url(https://res.cloudinary.com/ftmm/image/fetch/w_2000,c_fit,q_auto,f_auto,dpr_auto/{{img_url background size='xl'}}) 2x);
+     }
+ }
 
-    @media(max-width: 600px) {
-        .responsive-header-img {
-            background-image: url({{img_url background size='m'}});
-            background-image: -webkit-image-set(url({{img_url background size='m'}}) 1x,
-                url({{img_url background size='l'}}) 2x);
-            background-image: image-set(url({{img_url background size='m'}}) 1x,
-                url({{img_url background size='l'}}) 2x);
-        }
-    }
+ @media(max-width: 600px) {
+     .responsive-header-img {
+         background-image: url(https://res.cloudinary.com/ftmm/image/fetch/w_600,c_fit,q_auto,f_auto,dpr_auto/{{img_url background size='m'}});
+         background-image: -webkit-image-set(url(https://res.cloudinary.com/ftmm/image/fetch/w_600,c_fit,q_auto,f_auto,dpr_auto/{{img_url background size='m'}}) 1x,
+         url(https://res.cloudinary.com/ftmm/image/fetch/w_1000,c_fit,q_auto,f_auto,dpr_auto/{{img_url background size='l'}}) 2x);
+         background-image: image-set(url(https://res.cloudinary.com/ftmm/image/fetch/w_600,c_fit,q_auto,f_auto,dpr_auto/{{img_url background size='m'}}) 1x,
+         url(https://res.cloudinary.com/ftmm/image/fetch/w_1000,c_fit,q_auto,f_auto,dpr_auto/{{img_url background size='l'}}) 2x);
+     }
+ }
 </style>
 <div class="outer site-header-background responsive-header-img">
 
