--- a/index.hbs
+++ b/index.hbs
@@ -9,7 +9,7 @@ into the {body} of the default.hbs template --}}
             <div class="site-header-content">
                 <h1 class="site-title">
                     {{#if @site.logo}}
-                        <img class="site-logo" src="{{img_url @site.logo size="l"}}" alt="{{@site.title}}" />
+                        <img class="site-logo" src="https://res.cloudinary.com/ftmm/image/fetch/w_1000,c_fit,q_auto,f_auto,dpr_auto/{{img_url @site.logo size="l"}}" alt="{{@site.title}}" />
                     {{else}}
                         {{@site.title}}
                     {{/if}}
