--- a/partials/site-nav.hbs
+++ b/partials/site-nav.hbs
@@ -40,7 +40,7 @@
                  </div> -->
         {{else}}
             <a class="signin-link" href="{{@site.url}}/signin/">Log in</a>
-            <a class="button primary small header-cta" href="{{@site.url}}/bun-venit-la-curs/">Buy Course</a>
+            <a class="button primary small header-cta" href="{{@site.url}}/curs-online-de-paine-artizanala/">Buy Course</a>
         {{/if}}
     </div>
 </nav>
