--- a/partials/site-nav.hbs
+++ b/partials/site-nav.hbs
@@ -39,7 +39,7 @@
                  </ul>
                  </div> -->
         {{else}}
-            <a class="signin-link" href="{{@site.url}}/signin/">Log in</a>
+            <a class="signin-link" href="{{@site.url}}/signin/">Loog in</a>
             <a class="button primary small header-cta" href="{{@site.url}}/bun-venit-la-curs/">Buy Course</a>
         {{/if}}
     </div>
